Expand README with full technical depth
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>